--- a/SRE/Docker/09.Docker资源隔离.md
+++ b/SRE/Docker/09.Docker资源隔离.md
@@ -1,121 +1,63 @@
 # Linux namespace技术
-
 如果一个宿主机运行了N个容器，多个容器带来的以下问题怎么解决：
-
 1. 怎么样保证每个容器都有不同的文件系统并且能互不影响？
 2. 一个docker主进程内的各个容器都是其子进程，那么如何实现同一个主进程下不同类型的子进程？各个子进程间通信能相互访问吗？
 3. 每个容器怎么解决IP以及端口分配的问题？
 4. 多个容器的主机名能一样吗？
 5. 每个容器都要不要有root用户？怎么解决账户重名问题呢？
 
-以上问题怎么解决
+**解决方案**：
+namespace 是 Linux 系统的底层概念，在内核层实现，即有一些不同类型的命名空间都部署在核内，各个容器运行在同一个docker主进程并且共用同一个宿主机系统内核，各个docker容器运行在宿主机的用户空间，每个容器都要有类似于虚拟机一样的相互隔离的运行空间，但是容器技术是在一个进程内实现运行指定服务的运行环境，并且还可以保护宿主机内核不受其他进程的干扰和影响，如文件系统、网络空间、进程空间等。
 
-**namespace**是Linux系统的底层概念，在内核层实现，即有一些不同类型的命名空间都部署在核内，**各个docker容器运行在同一个docker主进程并且共用同一个宿主机系统内核**，各个docker容器运行在宿主机的用户空间，每个容器都要有类似于虚拟机一样的相**互隔离的运行空间**，但是容器技术是在一个进程内实现运行指定服务的运行环境，并且还可以保护宿主机内核不受其他进程的干扰和影响，如文件系统、网络空间、进程空间等，目前主要通过以下技术实现容器运行空间的相互隔离：
 
-| 隔离类型                                     | 功能                               | 系统调用参数  | 内核   |
-| -------------------------------------------- | ---------------------------------- | ------------- | ------ |
-| MNT Namespace（mount）                       | 提供磁盘挂载点和文件系统的隔离能力 | CLONE_NEWNS   | 2.4.19 |
-| IPC Namespace（Inter-Process Communication） | 提供进程间通信的隔离能力           | CLONE_NEWIPC  | 2.6.19 |
-| UTS Namespace（UNIX Timesharing System）     | 提供主机名隔离能力                 | CLONE_NEWUTS  | 2.6.19 |
-| PID Namespace（Process Identification）      | 提供进程隔离能力                   | CLONE_NEWPID  | 2.6.24 |
-| Net Namespace（network）                     | 提供网络隔离能力                   | CLONE_NEWNET  | 2.6.29 |
-| User Namespace（user）                       | 提供用户隔离能力                   | CLONE_NEWUSER | 3.8    |
+| 隔离类型 | 功能说明 | 系统调用参数 | 内核版本 | 应用场景 |
+| :--- | :--- | :--- | :--- | :--- |
+| MNT Namespace（mount） | 提供磁盘挂载点和文件系统的隔离能力，使容器拥有独立的文件系统层次结构 | CLONE_NEWNS | 2.4.19 | 容器镜像管理、数据卷挂载、持久化存储 |
+| IPC Namespace（Inter-Process Communication） | 提供进程间通信的隔离能力，确保容器内进程通信安全 | CLONE_NEWIPC | 2.6.19 | 容器内消息队列、共享内存、信号量隔离 |
+| UTS Namespace（UNIX Timesharing System） | 提供主机名和域名的隔离能力，使容器拥有独立的主机标识 | CLONE_NEWUTS | 2.6.19 | 容器主机名管理、集群服务发现 |
+| PID Namespace（Process Identification） | 提供进程隔离能力，实现容器内进程树独立管理 | CLONE_NEWPID | 2.6.24 | 容器进程管理、应用程序运行时隔离 |
+| Net Namespace（network） | 提供网络栈的隔离能力，包括网络设备、IP地址、路由表等 | CLONE_NEWNET | 2.6.29 | 容器网络配置、跨主机通信、服务端口映射 |
+| User Namespace（user） | 提供用户和用户组的隔离能力，增强容器安全性 | CLONE_NEWUSER | 3.8 | 容器权限控制、用户映射、安全策略管理 |
 
-## MNT Namespace
-
-每个容器都要有独立的根文件系统有独立的用户空间，以实现容器里面启动服务并且使用容器的运行环境。
-
-- 启动三个容器
-
+# MNT Namespace
+提供磁盘挂载点和文件系统的隔离能力，使容器拥有独立的文件系统层次结构。
 ```bash
-[root@docker-server ~]# docker run -d --name nginx-1 -p 80:80 nginx
-0e72f06bba417073d1d4b2cb53e62c45b75edc699b737e46a157a3249f3a803e
-[root@docker-server ~]# docker run -d --name nginx-2 -p 81:80 nginx
-c8ce6a0630b66e260eef16d8ecf48049eed7b893b87459888b634bf0e9e40f23
-[root@docker-server ~]# docker run -d --name nginx-3 -p 82:80 nginx
-1cddbd412b5997f8935815c2f588431e100b752595ceaa92b95758ca45179096
+# 在容器内挂载 tmpfs 文件系统
+docker run -it --rm ubuntu bash
+mkdir /mnt/tmpfs
+mount -t tmpfs -o size=100M tmpfs /mnt/tmpfs
+# 宿主机上无法看到此挂载点
+df -h
 ```
 
-- 连接进入某一个容器中，并创建一个文件
+# IPC Namespace
+提供进程间通信的隔离能力，确保容器内进程通信安全。
+```shell
+# 容器A创建共享内存段
+docker run -it --name shm1 --rm ubuntu bash
+ipcmk -M 64M  # 返回共享内存 ID（如 0）
 
-```bash
-[root@docker-server ~]# docker exec -it nginx-1 bash
-root@0e72f06bba41:/# echo 'hello world test!' > /opt/test1
-root@0e72f06bba41:/# exit
+# 容器B无法访问
+docker run -it --name shm2 --rm ubuntu bash
+ipcs -m  
 ```
 
-- 宿主机是使用了chroot技术把容器锁定到一个指定的运行目录里
-
-```bash
-[root@docker-server diff]# find / -name test1
-/var/lib/docker/overlay2/f9cc560395b5e3b11d2b1293922c4d31e6a6a32ca59af3d9274eabdfc6832424/diff/opt/test1
-/var/lib/docker/overlay2/f9cc560395b5e3b11d2b1293922c4d31e6a6a32ca59af3d9274eabdfc6832424/merged/opt/test1
+# UTS Namespace
+提供主机名和域名的隔离能力，使容器拥有独立的主机标识。
+```shell
+# 启动容器并设置主机名
+docker run -it --hostname=myapp --rm ubuntu bash
+hostname
 ```
 
-## IPC Namespace
-一个容器内的进程间通信，允许一个容器内的不同进程数据互相访问，但是不能跨容器访问其他容器的数据
-
-UTS Namespace包含了运行内核的名称、版本、底层体系结构类型等信息用于系统表示，其中包含了hostname和域名，它使得一个容器拥有属于自己hostname标识，这个主机名标识独立于宿主机系统和其上的其他容器。
-
-## PID Namespace
-Linux系统中，有一个pid为1的进程（init/systemd）是其他所有进程的父进程，那么在每个容器内也要有一个父进程来管理其下属的进程，那么多个容器的进程通PID namespace进程隔离
-
-- 安装软件包
-
-```bash
-[root@localhost ~]# docker exec -it 065f06e5caa4 bash
-root@0e72f06bba41:/# apt update
-# ifconfig
-root@0e72f06bba41:/# apt install net-tools
-# top
-root@0e72f06bba41:/# apt install procps
-# ping
-root@0e72f06bba41:/# apt install iputils-ping
-root@0e72f06bba41:/# ps -ef
-UID         PID   PPID  C STIME TTY          TIME CMD
-root          10  0 03:20 ?        00:00:00 nginx: master process nginx -g d
-nginx        32      1  0 03:20 ?        00:00:00 nginx: worker process
-nginx        33      1  0 03:20 ?        00:00:00 nginx: worker process
-nginx        34      1  0 03:20 ?        00:00:00 nginx: worker process
-nginx        35      1  0 03:20 ?        00:00:00 nginx: worker process
-nginx        36      1  0 03:20 ?        00:00:00 nginx: worker process
-nginx        37      1  0 03:20 ?        00:00:00 nginx: worker process
-nginx        38      1  0 03:20 ?        00:00:00 nginx: worker process
-nginx        39      1  0 03:20 ?        00:00:00 nginx: worker process
-root         59      0  0 03:35 pts/0    00:00:00 bash
-root        503     59  0 03:42 pts/0    00:00:00 ps -ef
+# PID Namespace
+提供进程隔离能力，实现容器内进程树独立管理。
+```shell
+# 查看当前宿主机所有进程
+# 查看当前容器内所有进程
 ```
 
 **那么宿主机的PID与容器内的PID是什么关系？**
-
-```bash
-[root@docker-server ~]# yum install psmisc
-[root@docker-server ~]# pstree -p
-systemd(1)─┬─NetworkManager(638)─┬─{NetworkManager}(665)
-           │                     └─{NetworkManager}(667)
-           ├─agetty(651)
-           ├─auditd(607)───{auditd}(608)
-           ├─chronyd(637)
-           ├─containerd(880)─┬─{containerd}(1024)
-           │                 ├─{containerd}(1025)
-           ├─containerd-shim(1472)─┬─nginx(1492)───nginx(1545)
-           │                       ├─{containerd-shim}(1473)
-           │                       ├─{containerd-shim}(1474)
-           ├─dockerd(1069)─┬─docker-proxy(1456)─┬─{docker-proxy}(1457)
-           │               │                    ├─{docker-proxy}(1458)
-           │               │                    ├─{docker-proxy}(1459)
-           │               │                    └─{docker-proxy}(1461)
-           │               ├─docker-proxy(1460)─┬─{docker-proxy}(1462)
-           │               │                    ├─{docker-proxy}(1463)
-           │               │                    ├─{docker-proxy}(1464)
-           │               │                    └─{docker-proxy}(1465)
-           │               ├─{dockerd}(1144)
-           │               ├─{dockerd}(1145)
-......
-
-[root@localhost ~]# ps aux | grep 065f06e5caa4
-```
-
 1. **独立的 PID 命名空间**:
    - 每个 Docker 容器都有自己独立的 PID 命名空间。
    - 容器内的进程 PID 从 1 开始编号,与宿主机上的 PID 是相互独立的。
@@ -129,76 +71,11 @@ systemd(1)─┬─NetworkManager(638)─┬─{NetworkManager}(665)
    - 容器内的进程无法访问或影响宿主机上的其他进程。
    - 宿主机上的进程可以访问和管理容器内的进程。
 
-## Net Namespace
+# Net Namespace
+提供网络栈的隔离能力，包括网络设备、IP地址、路由表等。参考`08.Docker网络管理`
 
-每一个容器都类似于虚拟机一样有自己的网卡、监听端口、TCP/IP协议栈等，Docker使用network namespace启动一个vethX接口，这样容器将拥有它自己的桥接IP地址，通常是docker0，而docker0实质就是linux的虚拟网桥。
-
-```bash
-[root@docker-server ~]# yum install bridge-utils.x86_64 -y
-[root@docker-server ~]# brctl show
-bridge name	bridge id		STP enabled	interfaces
-docker0		8000.0242c83ab23e	no		veth3ad3c5b
-[root@docker-server ~]# ifconfig 
-docker0: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
-        inet 172.17.0.1  netmask 255.255.0.0  broadcast 172.17.255.255
-        inet6 fe80::42:c8ff:fe3a:b23e  prefixlen 64  scopeid 0x20<link>
-        ether 02:42:c8:3a:b2:3e  txqueuelen 0  (Ethernet)
-        RX packets 0  bytes 0 (0.0 B)
-        RX errors 0  dropped 0  overruns 0  frame 0
-        TX packets 5  bytes 438 (438.0 B)
-        TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
-
-ens33: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
-        inet 192.168.88.10  netmask 255.255.255.0  broadcast 192.168.88.255
-        inet6 fe80::eaf3:dc40:2bf:6da2  prefixlen 64  scopeid 0x20<link>
-        ether 00:0c:29:f7:bf:0d  txqueuelen 1000  (Ethernet)
-        RX packets 20899  bytes 26611365 (25.3 MiB)
-        RX errors 0  dropped 0  overruns 0  frame 0
-        TX packets 9785  bytes 640866 (625.8 KiB)
-        TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
-
-lo: flags=73<UP,LOOPBACK,RUNNING>  mtu 65536
-        inet 127.0.0.1  netmask 255.0.0.0
-        inet6 ::1  prefixlen 128  scopeid 0x10<host>
-        loop  txqueuelen 1  (Local Loopback)
-        RX packets 72  bytes 5768 (5.6 KiB)
-        RX errors 0  dropped 0  overruns 0  frame 0
-        TX packets 72  bytes 5768 (5.6 KiB)
-        TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
-
-veth3ad3c5b: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
-        inet6 fe80::28f5:d3ff:feda:4f03  prefixlen 64  scopeid 0x20<link>
-        ether 2a:f5:d3:da:4f:03  txqueuelen 0  (Ethernet)
-        RX packets 0  bytes 0 (0.0 B)
-        RX errors 0  dropped 0  overruns 0  frame 0
-        TX packets 13  bytes 1086 (1.0 KiB)
-        TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
+# User Namespace
+提供用户和用户组的隔离能力，增强容器安全性。
+```shell
+# A容器创建用户在B容器里不可见
 ```
-
-- 查看docker内部网卡
-
-```bash
-root@0d5d7069b9d9:/# ifconfig 
-eth0: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
-        inet 172.17.0.2  netmask 255.255.0.0  broadcast 172.17.255.255
-        ether 02:42:ac:11:00:02  txqueuelen 0  (Ethernet)
-        RX packets 3708  bytes 8489188 (8.0 MiB)
-        RX errors 0  dropped 0  overruns 0  frame 0
-        TX packets 3340  bytes 182520 (178.2 KiB)
-        TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
-
-lo: flags=73<UP,LOOPBACK,RUNNING>  mtu 65536
-        inet 127.0.0.1  netmask 255.0.0.0
-        loop  txqueuelen 1  (Local Loopback)
-        RX packets 0  bytes 0 (0.0 B)
-        RX errors 0  dropped 0  overruns 0  frame 0
-        TX packets 0  bytes 0 (0.0 B)
-        TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
-```
-
-![img](01.docker介绍与安装/docker网络隔离.png)
-
-## User Namespace
-各个容器内可能会出现重名的用户和用户组名称，或重复的用户UID或者GID，那么怎么隔离各个容器内的用户空间呢？
-
-User Namespace允许在各个宿主机的各个容器空间内创建相同的用户名以及相同的uid和gid，只是此用户的有效范围仅仅是当前的容器内，不能访问另外一个容器内的文件系统，即相互隔离、互不影响、永不相见
